[package]
name = "bprocmemm"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os= "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",    
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",

]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.158"
